tui/src/chatwidget/snapshots/agere_tui__chatwidget__tests__final_worked_for_uses_cumulative_turn_duration.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: combined
---
• Bash(echo preparing)
  └ preparing

────────────────────────────────────────────────────────────────────────────────

• Final response.

─ Worked for 2m 05s ────────────────────────────────────────────────────────────
