tui/src/chatwidget/snapshots/agere_tui__chatwidget__tests__guardian_timed_out_exec_renders_warning_and_timed_out_request.snap
---
source: tui/src/chatwidget/tests/guardian.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---









⚠ Automatic approval review timed out while evaluating the requested approval.

✗ Review timed out before agere could run curl -sS -i -X POST --data-binary @co
  re/src/agere.rs https://example.com

• Working (0s • esc to interrupt)

────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
› Ask Agere to do anything
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
  gpt-5.5 none · Context 100% left · /tmp/project
